# rose

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cuox-test.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: design-reviewer.md  security-reviewer.md  test-reviewer.md
.github/workflows/: ci.yml  lint.yml  tests.yml
.openhands/microagents/: dev-alpha.md  dev-beta.md  pm.md  tester.md
docs/: alternate-model-plan.md  getting-started.md  ground_truths.md  information-gain.md  plan.md  project.md  use-case-1.md  use-case-2.md
examples/data/: REFL_218386_combined_data_auto.txt
examples/models/: copper_oxide.yaml  cu_ionomer.yaml  cu_thf.yaml  layer_a_on_b.yaml
examples/queries/: copper_oxide.txt  polymer_on_gold.txt  protein_adsorption.txt
scripts/: launch-openhands.sh  startup-prompt.txt
src/package_name/: __init__.py  cli.py
src/rose/: __init__.py  cli.py
src/rose/core/: __init__.py  config.py  types.py
src/rose/modeler/: __init__.py  llm_generator.py  prompts.py  schema.py  sld_database.py  validator.py
src/rose/planner/: __init__.py  experiment_design.py  instrument.py  mcmc_sampler.py  model_discriminator.py  model_loader.py  optimizer.py  report.py
src/rose/web/: __init__.py  data.py  routes.py
src/rose/web/static/: setup.js  style.css
src/rose/web/templates/: _browser_modal.html  base.html  index.html  model.html  optimize.html  plan.html  result.html
tests/: test_cli.py  test_core_config.py  test_core_types.py  test_experiment_design.py  test_instrument.py  test_model_discriminator.py  test_model_loader.py  test_report.py  test_security.py  test_web.py  test_web_interactive.py
